--- a/css/style.css
+++ b/css/style.css
@@ -1698,6 +1698,7 @@ input[type="radio"] .styled:checked+label::after {
      color: #fff;
      line-height: 50px;
      padding-bottom: 35px;
+     text-align: center;
 }
 .about .about-box .white-bg {
      background: #fff;
@@ -1710,6 +1711,7 @@ input[type="radio"] .styled:checked+label::after {
      font-size: 30px;
      line-height: 20px;
      color: #000;
+     text-align: center;
 }
 .about-box .titlepage {
      text-align: right;
@@ -1724,6 +1726,7 @@ input[type="radio"] .styled:checked+label::after {
      position: relative;
      margin-bottom: 20px;
      text-shadow: 2px 2px 8px #000000;
+     text-align: center;
 }
 .about-box .titlepage h2::after {
      content: "";
@@ -1735,6 +1738,7 @@ input[type="radio"] .styled:checked+label::after {
      background: #008104;
      width: 75%;
      right: -29px;
+     text-align: center;
 }
 .about-box .titlepage span {
      color: #ffffff;
@@ -1762,6 +1766,7 @@ input[type="radio"] .styled:checked+label::after {
 .about-box .titlepage .read-more a:hover {
      background-color: #084110;
      color: #fff;
+     text-align: center;
 }
 
 /** end section **/
@@ -1829,7 +1834,7 @@ input[type="radio"] .styled:checked+label::after {
      padding: 0px 0px 36px 0px;
      font-size: 50px;
      font-weight: bold;
-     color: #050303;
+     color: #065124;
      line-height: 50px;
      position: relative;
      margin-bottom: 20px;
@@ -1895,7 +1900,7 @@ form a {
 }
 form a:hover {
      color: #fff;
-     background: #000;
+     background: #0fd482;
 }
 .form-control {
      border: #ddd solid 1px;
@@ -1906,7 +1911,7 @@ form a:hover {
 }
 .form-control:focus {
      box-shadow: none;
-     border: #ddd solid 1px;
+     border: #481919 solid 1px;
 }
 textarea {
      margin-bottom: 30px;
